[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "libpass"
description = "library for interacting with pass managed data"
version = "0.0.1"
authors = ["Finn Sell <dev@finn-thorben.me>"]
edition = "2021"
repository = "https://github.com/ftsell/libpass"
license = "MIT"
keywords = ["pass", "password", "password manager", "manager", "unix"]
categories = ["api-bindings", "cryptography", "data-structures", "filesystem"]

[dependencies]
