[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "libpass"
description = "library for interacting with pass managed data"
version = "0.2.0"
authors = ["Finn Sell <dev@finn-thorben.me>"]
edition = "2021"
repository = "https://github.com/ftsell/libpass-rs"
documentation = "https://docs.rs/libpass/"
license = "MIT"
keywords = ["pass", "password", "manager", "unix"]
categories = ["api-bindings", "cryptography", "data-structures", "filesystem"]

[workspace.metadata.release]
pre-release-commit-message = "release {{version}}"
tag-name = "v{{version}}"
tag-message = "release {{crate_name}} v{{version}}"
post-release-commit-message = "start next development iteration {{next_version}}"

[dependencies]
log = "0.4.17"
thiserror = "1.0.31"
directories = "4.0.1"
gpgme = "0.10.0"

[dev-dependencies]
